Add prettier script and format all files

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>INDIVISUAL</title>
 
     <meta
-      name="keywords" content="Music, Production, Music Production, PG-13, Vermello, Roca Dianco, JAYAN,
+      name="keywords"
+      content="Music, Production, Music Production, PG-13, Vermello, Roca Dianco, JAYAN,
       Art, Toronto, IV, Indivisualiv, Indivisual, Entertainment, Hip Hop, R&B, Lofi, Rap, Vocal"
-    >
-   <meta name="description" content="Creative production team in Toronto, 인디비쥬얼 공식 홈페이지.">
+    />
+    <meta name="description" content="Creative production team in Toronto, 인디비쥬얼 공식 홈페이지." />
   </head>
   <body>
     <div id="app"></div>
